--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ appnope==0.1.2
 asgiref==3.4.1
 backcall==0.2.0
 billiard==3.6.4.0
+boto3==1.17.109
+botocore==1.20.109
 celery==5.1.2
 certifi==2021.5.30
 chardet==4.0.0
@@ -17,6 +19,7 @@ django-heroku==0.3.1
 gunicorn==20.1.0
 idna==2.10
 jedi==0.18.0
+jmespath==0.10.0
 kombu==5.1.0
 matplotlib-inline==0.1.2
 parso==0.8.2
@@ -28,8 +31,11 @@ prompt-toolkit==3.0.19
 psycopg2==2.9.1
 ptyprocess==0.7.0
 Pygments==2.9.0
+python-dateutil==2.8.1
 pytz==2021.1
+redis==3.5.3
 requests==2.25.1
+s3transfer==0.4.2
 six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
