--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,37 @@
 amqp==5.0.6
 appnope==0.1.2
 asgiref==3.4.1
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
 backcall==0.2.0
 billiard==3.6.4.0
 boto3==1.17.109
 botocore==1.20.109
 celery==5.1.2
 certifi==2021.5.30
+cffi==1.14.6
+channels==3.0.4
 chardet==4.0.0
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
 click-repl==0.2.0
+constantly==15.1.0
+cryptography==3.4.7
+daphne==3.0.2
 decorator==5.0.9
 dj-database-url==0.5.0
 Django==3.2.5
+django-eventstream==4.2.0
+django-grip==3.0.0
 django-heroku==0.3.1
+django-sse-wrapper==0.0.4
+gripcontrol==4.1.0
 gunicorn==20.1.0
+hyperlink==21.0.0
 idna==2.10
+incremental==21.3.0
 jedi==0.18.0
 jmespath==0.10.0
 kombu==5.1.0
@@ -30,18 +44,30 @@ pip-tools==6.2.0
 prompt-toolkit==3.0.19
 psycopg2==2.9.1
 ptyprocess==0.7.0
+pubcontrol==3.2.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 Pygments==2.9.0
+PyJWT==2.1.0
+pyOpenSSL==20.0.1
 python-dateutil==2.8.1
 pytz==2021.1
 redis==3.5.3
 requests==2.25.1
 s3transfer==0.4.2
+service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.1
+sse==1.2
 toml==0.10.2
 traitlets==5.0.5
+Twisted==21.2.0
+txaio==21.2.1
 unicodecsv==0.14.1
 urllib3==1.26.6
 vine==5.0.0
 wcwidth==0.2.5
+Werkzeug==0.16.1
 whitenoise==5.2.0
+zope.interface==5.4.0
